--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "react-router-dom": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+	  "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+	},
+	"homepage": "http://nickhericks.github.io/react-router-course-directory"
 }
