--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
     "react-scripts": "1.0.6"
   },
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^5.0.0"
   },
   "scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -d build",
-	  "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-	},
-	"homepage": "http://nickhericks.github.io/react-router-course-directory"
+  },
+  "homepage": "http://nickhericks.github.io/react-router-course-directory"
 }
